--- a/config.json
+++ b/config.json
@@ -85,8 +85,8 @@
       "api": "https://zy.xmm.hk/api.php/provide/vod",
       "name": "小猫咪资源"
     },
-    "豪华m3u8": {
+    "hhm3u8": {
       "api": "https://hhzyapi.com/api.php/provide/vod/from/hhm3u8",
-      "name": "豪华资源"
+      "name": "豪华m3u8"
   }
 }
